fix(styling): align the icon in DeviceSettings button

--- a/packages/styling/src/DeviceSettings.scss
+++ b/packages/styling/src/DeviceSettings.scss
@@ -4,6 +4,8 @@
   cursor: pointer;
   border: none;
   background-color: transparent;
+  padding: 0.375rem;
+  display: flex;
 
   .str-video__device-settings__icon {
     display: inline-block;
